kubernetes/librechat_deployment.yaml
# Main LibreChat Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librechat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librechat
  template:
    metadata:
      labels:
        app: librechat
    spec:
      # serviceAccountName: librechat
      containers:
        - name: librechat
          image: "ghcr.io/danny-avila/librechat:latest"
          ports:
            - name: http
              containerPort: 3080
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /
              port: http
          readinessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: librechat-config
              mountPath: /app/librechat.yaml
              subPath: librechat.yaml
      volumes:
        - name: librechat-config
          configMap:
            name: librechat-config
