kubernetes/Meilisearch.yaml
# Meilisearch Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
spec:
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.12.3
          volumeMounts:
            - name: meilisearch-data
              mountPath: /meili_data
      volumes:
        - name: meilisearch-data
          persistentVolumeClaim:
            claimName: meilisearch-data
---
# Meilisearch Service
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
spec:
  selector:
    app: meilisearch
  ports:
    - port: 7700
      targetPort: 7700
