kubernetes/librechat_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: librechat-api-service
spec:
  type: ClusterIP
  selector:
    app: librechat
  ports:
    - protocol: TCP
      port: 3080
      targetPort: 3080
