kubernetes/q_business_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: q-business-api-service
spec:
  type: ClusterIP
  selector:
    app: q-business-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
