kubernetes/rag_api.yaml
# RAG API Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-api
spec:
  selector:
    matchLabels:
      app: rag-api
  template:
    metadata:
      labels:
        app: rag-api
    spec:
      containers:
        - name: rag-api
          image: ghcr.io/danny-avila/librechat-rag-api-dev-lite:latest
---
# RAG API Service
apiVersion: v1
kind: Service
metadata:
  name: rag-api
spec:
  selector:
    app: rag-api
  ports:
    - port: 8000
      targetPort: 8000
---
